<resources>

    <string name="app_name">Simple Balance</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Simple Balance</string>
    <string name="update_ammount">Update funds</string>
    <string name="updateBox">Amount to update</string>
    <string name="addMoney">Addition</string>
    <string name="subMoney">Subtraction</string>
    <string name="currentMoneyLabel">Current Money</string>
    <string name="defaultValue">$0.00</string>
    <string name="boughtHint">What\'d you buy?</string>
    <string name="title_activity_mtsettings">Settings</string>
    <string name="greeting">Please enter your intial ammount:</string>
    <string name="initialHint">Ammount in dollars</string>
    <string name="insertButton">Update</string>
    <string name="hint_where_purchased">Where\'d you buy it?</string>
    <string name="hint_where_given">Who gave you the money?</string>
    <string name="hint_what_given">What was it?</string>
    <string name="title_activity_transaction">Transactions</string>

    
    <string-array name="type_array">
        <item>Gas</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Bills</item>
        <item>Significant Other</item>
    </string-array>
    
    
</resources>