<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center" >

	<TextView
	    android:id="@+id/greetingView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/greeting"
	     />
	<EditText
	    android:id="@+id/initialBox"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/initialHint"
	    android:inputType="numberDecimal"
	    />
	<Button
	    android:id="@+id/insertMoney"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/insertButton"
	   	android:onClick="updateMoney" />

</LinearLayout>